<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:baselineAligned="false"
        android:gravity="left|center"
        android:padding="24dp"
        android:text="@string/add_transaction"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/cost"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:hint="@string/cost_of_buy"
        android:inputType="numberDecimal"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner_of_category_list"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:tooltipText="@string/choose_category">

    </Spinner>

    <EditText
        android:id="@+id/description_of_buy"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:hint="@string/add_description_of_buy"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/layout_with_but_create"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/OK_button"
            android:layout_width="411dp"
            android:layout_height="75dp"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal|center"
            android:onClick="onClickTransactionCreated"
            android:text="@string/ok"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>
