<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/your_category"
        android:textSize="28sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:textSize="20sp"
            android:text="@string/no_cat_yet"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_category_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:layout_weight="1">
        <Button
            android:id="@+id/add_spend_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center"
            android:text="@string/add_spend"
            android:textSize="25sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/add_category_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_category"
                android:textSize="25sp"
                android:onClick="onClickAddCategroy"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/add_budg_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_budg"
                android:textSize="25sp"
                android:onClick="onClickCreateBudget"
                android:layout_weight="1"
                />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>