<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/enter_cat_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center_horizontal"
        android:padding="24dp"
        android:text="@string/your_category"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold">

    </TextView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/category_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button_layout"
        android:layout_below="@id/enter_cat_txt"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/colorPrimaryDark" />

    <!--<android.support.v7.widget.RecyclerView
        android:id="@+id/budget_stat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button_layout"
        android:layout_below="@id/enter_cat_txt"
        android:layout_alignEnd="@+id/category_list"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-3dp" />-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_layout"
        android:layout_below="@id/enter_cat_txt"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/no_cat_txt"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="24dp"

            android:text="@string/no_cat_yet"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/no_el_img"
            android:layout_width="match_parent"
            android:layout_height="119dp"
            android:src="@drawable/no_elements" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/add_spend_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/button_layout"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal|center"
            android:onClick="onClickCreateTransaction"
            android:text="@string/add_spend"
            android:textColor="@android:color/background_light"
            android:textSize="15sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_category_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:onClick="onClickAddCategroy"
                android:text="@string/add_category"
                android:textColor="@android:color/background_light"
                android:textSize="15sp" />

            <Button
                android:id="@+id/add_budg_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@android:color/holo_purple"
                android:onClick="onClickCreateBudget"
                android:text="@string/add_budg"
                android:textColor="@android:color/background_light"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>